google analytics:   templates/accounts/base.html 	google analytics:   templates/base.html 	google analytics:   templates/landlords/landlord_base.html 	google analytics:   templates/seekers/seekers_base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: https://ogp.me/ns#">
 <head>
+        <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-9L194DZGNR"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-9L194DZGNR');
+      </script>
     <!-- Primary Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
